--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Game GXN - Nosotros</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
@@ -44,7 +44,7 @@
 
         <div class="card">
             <div class="imagen-card">
-                <img src="../imagenes/nosotros/mision.jpg" alt="Misión">
+                <img src="imagenes/nosotros/mision.jpg" alt="Misión">
             </div>
             <h2>Nuestra Misión</h2>
             <p>
@@ -55,7 +55,7 @@
 
         <div class="card">
             <div class="imagen-card">
-                <img src="../imagenes/nosotros/vision.jpg" alt="Visión">
+                <img src="imagenes/nosotros/vision.jpg" alt="Visión">
             </div>
             <h2>Nuestra Visión</h2>
             <p>
